Fixed asteroid and gallery home link and asteroid items now stretch the page with proper information

--- a/asteroidPage/asteroids.css
+++ b/asteroidPage/asteroids.css
@@ -20,10 +20,11 @@ body{
 li{
     background-color: #1f4068;
     text-align: center;
-    margin: 20px;
+    margin: 0px;
     list-style: none;
-    list-style-position:inside;
-    margin-left:0px;
+    flex: 1;
+    min-width: 300px;
+    height: fit-content;
 }
 
 a{
@@ -47,11 +48,14 @@ ul{
     display:flex;
     flex-flow: wrap;
     list-style: none;
-    padding-left:20px
+    padding:20px;
+    gap: 20px;
+    justify-content: center;
 }
 
 h3, h4{
     width: 100%;
+    text-align: center;
     
 }
 nav{
